k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: disaster-ingress
  namespace: disaster-response
spec:
  ingressClassName: nginx
  rules:
  - host: disaster.lazycatto.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: j3-dms
            port:
              number: 80
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: kong
            port:
              number: 8000
